errorlogs/1516498151465-AmoFinder.py.txt
err:winediag:SECUR32_initNTLMSP ntlm_auth was not found or is outdated. Make sure that ntlm_auth >= 3.0.25 is in your path. Usually, you can find it in the winbind package of your distribution.
146 INFO: PyInstaller: 3.3.1
146 INFO: Python: 3.4.4
147 INFO: Platform: Windows-XP-5.1.2600-SP3
148 INFO: wrote Z:\p2e\AmoFinder.spec
154 INFO: UPX is not available.
154 INFO: Removing temporary files and cleaning cache in C:\users\root\Application Data\pyinstaller
161 INFO: Extending PYTHONPATH with paths
['Z:\\p2e\\workingdir\\1516498151465', 'Z:\\p2e']
161 INFO: checking Analysis
162 INFO: Building Analysis because out00-Analysis.toc is non existent
162 INFO: Initializing module dependency graph...
170 INFO: Initializing module graph hooks...
174 INFO: Analyzing base_library.zip ...
6724 INFO: Processing pre-find module path hook   distutils
9857 INFO: running Analysis out00-Analysis.toc
10342 INFO: Caching module hooks...
10356 INFO: Analyzing Z:\p2e\workingdir\1516498151465\AmoFinder.py

Syntax error in Z:\p2e\workingdir\1516498151465\AmoFinder.py
  File "Z:\p2e\workingdir\1516498151465\AmoFinder.py", line 82
     print nse
             ^
 SyntaxError: Missing parentheses in call to 'print'

